# objective-framework

./: .gitignore  README.md  pyproject.toml  view.ipynb
core/: api.py
core/base/: __init__.py  config.py  storebase.py
core/func/: __init__.py  converters.py  loaders.py  normalizers.py
core/meta/: __init__.py  entity.py  field.py  lookupconfig.py  optional.py  querylist.py
core/store/: __init__.py  catalog.py  registry.py
model/: __init__.py
model/entities/: __init__.py  asset.py  domain.py  owner.py
