[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "objective-framework"
version = "0.1.0"
description = "Framework for loading, normalizing, and exporting business entities."
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
]
